--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="dengueFrontApp">
+  <body ng-app="dengueFrontApp" ng-controller="MainCtrl">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -25,7 +25,6 @@
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -33,18 +32,20 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" ui-sref="main">dengueFront</a>
+            <a class="navbar-brand" ui-sref="main">
+              <i class="fa fa-rocket" aria-hidden="true"></i>
+            </a>
           </div>
-
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav">
-              <li><a ui-sref="main" ui-sref-active="active">State</a></li>
-              <li><a ui-sref="teste" ui-sref-active="active">State 1</a></li>
+              <li><a ui-sref="main" ui-sref-active="active">Main</a></li>
+              <li><a ui-sref="signUp" ui-sref-active="active">SignUp</a></li>
+              <li><a ui-sref="createDenuncia" ui-sref-active="active">Denunciar</a></li>
               <li><a ui-sref="login" ui-sref-active="active">Login</a></li>
             </ul>
+            <button class="btn navbar-btn pull-right" ng-click="logout()" align="left"
+            style="background-color:rgba(244, 67, 54, 0.7); color:white;"><i class="fa fa-sign-out"></i>Sair</button>
           </div>
-        </div>
       </div>
     </div>
 
@@ -52,7 +53,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="fa fa-heartbeat"></span> À serviço do bem-estar e saúde!</p>
       </div>
     </div>
 
@@ -80,6 +81,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <!-- endbower -->
 
     <!-- endbuild -->
@@ -88,8 +91,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/config.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/teste.js"></script>
+        <script src="scripts/controllers/signUp.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/denuncia.js"></script>
         <!-- endbuild -->
-</body>
+  </body>
 </html>
