--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -31,19 +32,20 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" ui-sref="main">
-              <i class="fa fa-rocket" aria-hidden="true"></i>
-            </a>
           </div>
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a ui-sref="main" ui-sref-active="active">Main</a></li>
-              <li><a ui-sref="signUp" ui-sref-active="active">SignUp</a></li>
+              <li><a ui-sref="main" ui-sref-active="active"><i class="fa fa-home"></i></a></li>
+              <li><a ui-sref="informacao" ui-sref-active="active">Informações</a></li>
               <li><a ui-sref="createDenuncia" ui-sref-active="active">Denunciar</a></li>
-              <li><a ui-sref="login" ui-sref-active="active">Login</a></li>
+              <li><a ui-sref="showDenuncias" ui-sref-active="active">Minhas Denúncias</a></li>
+              <li><a ui-sref="estatisticas" ui-sref-active="active">Estatísticas</a></li>
             </ul>
-            <button class="btn navbar-btn pull-right" ng-click="logout()" align="left"
+            <button class="btn btn-default navbar-btn pull-right" ng-if="!isAuthenticated()" ui-sref="login"
+            style="background-color:rgba(76, 175, 80, 0.7); color:white;"><i class="fa fa-sign-in"></i>Login</button>
+            <button class="btn btn-default navbar-btn pull-right" ng-if="!isAuthenticated()" ui-sref="signUp"
+            style="background-color:rgba(3, 169, 244, 0.7); color:white;">Cadastro</button>
+            <button class="btn navbar-btn pull-right" ng-if="isAuthenticated()" ng-click="logout()" align="left"
             style="background-color:rgba(244, 67, 54, 0.7); color:white;"><i class="fa fa-sign-out"></i>Sair</button>
           </div>
       </div>
@@ -81,8 +83,12 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/satellizer/dist/satellizer.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/satellizer/dist/satellizer.js"></script>
+    <script src="bower_components/angular-viacep/dist/angular-viacep.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/build/nv.d3.js"></script>
+    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <!-- endbower -->
 
     <!-- endbuild -->
@@ -93,7 +99,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/signUp.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/denuncia.js"></script>
+        <script src="scripts/controllers/createDenuncia.js"></script>
+        <script src="scripts/controllers/showDenuncias.js"></script>
+        <script src="scripts/controllers/estatisticas.js"></script>
         <!-- endbuild -->
   </body>
 </html>
